--- a/src/app/[lang]/[slug]/content/bucket-hat/bucket-hat.ko.mdx
+++ b/src/app/[lang]/[slug]/content/bucket-hat/bucket-hat.ko.mdx
@@ -1,45 +1,93 @@
 ---
-title: "Bucket Hat Pattern Generator"
+title: "버킷 햇 재봉 패턴 생성 웹앱"
 date: "2025-03-15"
 slug: "bucket-hat"
 ---
 
-## 1.introduction
+import { ConeDevelopment } from "./ConeDevelopment";
 
-this is a project where you can generate sewing patterns of a bucket hat with imput parameters such as size, shape, and seam allowance. it also features a 3d preview of the generated hat with physics simulation.
+## 소개
 
-the project aims to present an understanding of the final product of the sewing pattern before cutting and sewing. one of the main difficulties of sewing from patterns as a hobbiest is that its hard to have an idea of how the final product will look like before completion. slight changes to length and angles of the pattern can lead to significant changes to the final form.
+이 프로젝트는 사용자가 버킷햇의 사이즈, 형태, 시접과 같은 입력값을 설정하여 재봉 패턴을 생성할 수 있도록 합니다. 또한, 생성된 모자의 3D 미리보기와 물리 시뮬레이션 기능도 제공합니다.
+이 프로젝트의 목표는 패턴을 자르고 바느질하기 전에 최종 제품이 어떻게 보일지를 예측할 수 있도록 돕는 것입니다. 취미로 재봉을 하는 사람들에게 가장 어려운 점 중 하나는, 패턴만 보고는 완성된 모양을 상상하기 어렵다는 것입니다. 패턴의 길이와 각도를 조금만 변경해도 최종 형태에 큰 차이가 생길 수 있습니다.
 
-i decided to build this because i sew quite a few bucket hats for personal use and gifting. bucket hats has a wide variety of shapes and it is difficult to how it will look by just looking at the pattern. for example the curvature of the arc of the brim pattern changes how much the brim is flared from the hat. the angle formed by the curvature is hard to visualize unless you cut it up and put it together. three dimensional garments such hats suffer a lot from this difficulty and thats why i decided to build this project
+저는 개인적으로 사용할 버킷햇을 직접 만들고 선물하면서 이 프로젝트를 개발하게 되었습니다. 버킷햇은 매우 다양한 형태를 가질 수 있으며, 패턴만 봐서는 최종 모양을 예측하기가 어렵습니다. 예를 들어, 챙 패턴의 곡률은 챙이 얼마나 퍼지는지를 결정하는데, 이 각도를 직접 잘라서 조립해 보기 전까지는 시각적으로 이해하기 어렵습니다. 이처럼 3D 형태의 의류는 평면 패턴만으로는 예측하기 어려운 경우가 많기 때문에, 이를 해결하고자 이 프로젝트를 만들게 되었습니다.
 
-## 2. features & functionality
+## 대상 사용자
 
-the project features a configuration panel with parameter inputs, a three dimensional model of the hat with cloth simulation, and a preview of the sewing pattern. users can input their measurements such as head diameter, head height, brim width, brim angle and seam allowance. the sewing pattern and 3d model is generated with the calculations with theses inputs and are changed in real time for an simulatanious interaction. the 3d model can be applied with a physics engine and simulate how that hat sits on a head with the ability to change physics parameters such as fabric stiffness, weight and gravity. than the sewing pattern can be exported to pdf with desired paper size.
+이 도구는 처음 재봉을 시작하는 취미 재봉사들을 주요 대상으로 합니다. 특히, 무료 패턴을 찾기 어렵거나 직접 패턴을 만들기 어려운 초보자들에게 유용할 것입니다. 이 프로젝트는 다양한 크기와 형태의 버킷햇을 한 번에 생성할 수 있는 포괄적인 도구가 되는 것을 목표로 합니다.
 
-### 2-1. technologies
+그러나 단순한 패턴 생성 도구를 넘어, 중급 및 고급 재봉사들에게도 실험적인 테스트 도구로 활용될 수 있습니다. 원하는 모양의 패턴을 정확하게 계산할 수 있을 뿐만 아니라, 원단의 무게와 강성을 시뮬레이션할 수 있어 다양한 디자인을 실험할 수 있는 가능성을 제공합니다.
 
-- reactjs - framework
-- nextjs
-- threejs - 3d view
-- react three fiber - threejs react renderer
-- cannonjs - physics engine
-- jspdf - pdf generation
-- svg2pdf - svg to pdf jspdf plugin
-- d3js - svg generation
-- firebase - feedback database
-- figma - design
-- react-tooltips - tooltips
+## 기능 및 특징
 
-### 3. design & ux
+이 프로젝트는 다양한 파라미터를 설정할 수 있는 구성 패널, 3D 물리 시뮬레이션이 적용된 모자 모델, 그리고 재봉 패턴 미리보기를 제공합니다. 사용자는 머리 둘레, 머리 높이, 챙 너비, 챙 각도, 시접 등을 입력할 수 있으며, 이를 기반으로 즉시 계산된 패턴과 3D 모델이 실시간으로 생성됩니다.
 
-i took inspiration from old school sewing books, line drawing aesthetics, analog dials and sliders from the mid-century modern electronics, notably dieter rams designs. the interactive ui elements are distinctly borders and with a drop shadow to indicate interactivity. the wordmark is EB Garamond and heading and paragraph Inter.
+3D 모델은 물리 엔진을 적용하여 모자가 머리에 어떻게 착용되는지 시뮬레이션할 수 있습니다. 사용자는 원단의 강성, 무게, 중력과 같은 물리적 요소를 조정하여 모자의 착용감을 보다 정확히 예측할 수 있습니다. 마지막으로, 사용자가 원하는 용지 크기에 맞춰 패턴을 PDF로 내보낼 수도 있습니다.
 
-the layout of the desktop version is a general configuration setup - a large view and a panel on one side. one of the responsive design challenges was to make a comprehensive configuration layout for mobile. a mobile screen is too small to divide into panel and view sections. a limited area for the interactive zone for the parameters can be stifling and decrease usability. so i decieded to change the 3d viewport into a floating viewport once the page is scrolled down. although the floating viewport still covers a significant amount of interactive area, users can still sense what elementes are behind it with the uncovered areas.
+### 2-1. 사용 기술
 
-### 4. development process
+- Next.js - 프레임워크
+- Three.js - 3D 뷰 렌더링
+- React Three Fiber - Three.js의 React 렌더러
+- Cannon.js - 물리 엔진
+- jsPDF - PDF 생성
+- svg2pdf - SVG를 PDF로 변환하는 jsPDF 플러그인
+- D3.js - SVG 패턴 생성
+- Firebase - 피드백 데이터베이스
+- Figma - 디자인 작업
+- React-tooltips - 툴팁 기능
 
-i started out by building core functions. taking a few input parameters(head diameter, height, brim width, angle) and using them to calculate variables needed to generate a sewing pattern. i used the svg generating functions of d3js to draw the pattern. i made shape modifying functions along the way such as offset shape and centering. jspdf was used for pdf generation. svg2pdf was needed as a jspdf plugin to insert svg into the pdf document.
+## 디자인 및 사용자 경험 (UX)
 
-### 5. challenges
+![Braun TS 45 Control Unit](https://assets.fontsinuse.com/use-media/20677/upto-700xauto/56703525/1/jpeg/121217RA_braun_hi_fi_amp_005.jpeg)
 
-one of the opening challenges was the algorithm of generating the development(unfolded planar figure) of a elliptical cone. the traditional drawing a development of a circular cone consists of a sector shape(pizza slice) and a circle. i initially thought an elliptical cone would have a similar development with an established formula of calculating one. however, my search results came to the conclusion that there is no formulated development of an elliptical cone, let alone [a formula for the circumference of an ellipse](https://en.wikipedia.org/wiki/Perimeter_of_an_ellipse).i was stuck on finding an established solution for some time(to think it would be simple as 2πr) but eventually made an algorithm with approximation calculations. the shape is in a margin of error of ±2%. the algorithm calculates the distance between the tip of the cone to a point on the base ellipse. a circle is integrally drawn with this distance. the resulting shape looks like a ellipse with a bulge in the middle depending on the eccentricity.
+이 프로젝트의 디자인은 오래된 재봉책, 라인 드로잉 스타일, 미드센추리 모던 전자기기의 다이얼과 슬라이더에서 영감을 받았습니다. 특히, 디터 람스(Dieter Rams)의 디자인 철학을 참고하여 UI 요소는 명확한 테두리와 그림자를 활용해 상호작용 가능성을 강조했습니다. 워드마크는 'EB Garamond'를 사용하고, 제목과 본문에는 'Inter' 폰트를 적용했습니다.
+
+데스크톱 버전에서는 전형적인 설정 패널과 미리보기 영역으로 레이아웃을 구성했습니다. 하지만 모바일에서는 화면을 나누기 어렵기 때문에, 인터랙션 영역이 너무 작아지지 않도록 3D 뷰포트를 플로팅 방식으로 전환했습니다. 이 방식은 UI 요소를 가리면서도, 사용자가 뒤에 있는 요소를 충분히 인식할 수 있도록 고려되었습니다.
+
+## 개발 과정
+
+### 1. 핵심 기능 구현
+
+먼저, 머리 둘레, 높이, 챙 너비, 각도 등의 입력값을 받아 이를 기반으로 패턴을 생성하는 핵심 기능을 개발했습니다. D3.js를 사용하여 SVG로 패턴을 그렸으며, 패턴을 조정할 수 있도록 중심 정렬 및 오프셋 기능을 추가했습니다. PDF로 내보내기 위해 jsPDF를 사용하고, SVG를 PDF로 삽입하기 위해 svg2pdf 플러그인을 활용했습니다.
+
+이후, 3D 미리보기와 물리 엔진을 추가하여 프로젝트의 핵심 기능을 완성했습니다.
+
+### 2. 모자 치수 계산
+
+버킷햇은 두 개의 잘린 원뿔(트렁케이티드 콘)로 구성됩니다. 하나는 머리 부분(헤드 밴드)이고, 다른 하나는 챙(브림)입니다. 헤드 부분에는 꼭대기 덮개(크라운)가 포함됩니다. 보다 세밀한 조정을 위해, 사용자가 머리를 위에서 내려다본 형태의 이심률(헤드 비율)을 조정할 수 있도록 했습니다.
+
+입력값을 기반으로 다양한 변수를 계산하여 3D 모델과 패턴을 생성합니다.
+
+### 입력값 및 계산 변수
+
+- 머리 둘레
+- 머리 높이
+- 머리 비율
+- 챙 너비
+- 챙 각도
+- 머리 원뿔 반경 (Major Axis, Minor Axis)
+- 머리 원뿔 높이
+- 머리 원뿔 전개 각도
+- 챙 원뿔 반경 (Major Axis, Minor Axis)
+- 챙 원뿔 높이
+- 챙 원뿔 전개 각도
+- 챙 바닥 오프셋
+- 크라운 반경 (Major Axis, Minor Axis)
+
+### 3. 패턴 생성 및 전개도 계산
+
+타원형 원뿔의 전개도를 계산하기 위해, 각도별로 변하는 경사 길이를 측정해야 합니다. 이를 위해 `2π/segments` 단위로 나누어 각도별 경사 길이를 계산한 후, 이를 반지름으로 하여 원형에 가까운 형태를 그립니다.
+
+<ConeDevelopment />
+
+### 4. PDF 내보내기
+
+jsPDF를 활용하여 동적으로 PDF를 생성하고, svg2pdf 플러그인을 사용하여 SVG 패턴을 삽입했습니다. 기존 PDF 파일을 수정하는 기능이 없어, 코드로 직접 모든 요소를 추가해야 했던 점이 아쉬웠습니다.
+
+## 3D 시뮬레이션
+
+물리 시뮬레이션을 통해 사용자는 모자의 형태와 착용감을 더 직관적으로 이해할 수 있습니다. 시뮬레이션이 완벽하지는 않지만, 생성된 모자가 실제로 머리에 어떻게 놓일지를 시각적으로 표현하는 데 큰 도움을 줍니다.
+
+시뮬레이션은 두 개의 월드(물리 세계, 그래픽 세계)로 구성됩니다. Three.js를 사용하여 3D 모델을 생성하고 렌더링하며, Cannon.js를 사용하여 물리적인 상호작용을 시뮬레이션합니다. 이렇게 하면 모자의 원단 특성과 움직임을 더 현실적으로 표현할 수 있습니다.
